--- a/1.html
+++ b/1.html
@@ -18,7 +18,7 @@
     <li>Chungcheong</li>
 </ul>
 <H3>ABOUT US</H3>
-<img src="img1.JFIF" width="100%">
+<img src="img3.Jpg" width="100%">
 <br><br><strong>There are many places that are very attractive in Korea.</strong>
 <p>However, foreigners who visit Korea are bored only in Myeongdong and Gangnam.</p>
 
